--- a/style.css
+++ b/style.css
@@ -12,13 +12,10 @@ body {
 }
 button {
     color: #000000;
-    border: 2px solid black;
-    width: 100px;
-    height: 50px;
-    margin: 0 auto;
+    border: 3px solid black;
+    width: 200px;
+    height: 30px;
     font-size: 20px;
     background-color: yellow;
-    position: fixed;
-    bottom: 5%;
-    text-align: center;
+    position: relative;
 }
