--- a/style.css
+++ b/style.css
@@ -19,3 +19,84 @@ button {
     background-color: yellow;
     position: relative;
 }
+button:hover {
+    cursor: crosshair;
+    background-color: whitesmoke;
+    transition: ease-in-out 0.3s;
+  }
+#myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  #myImg:hover {opacity: 0.7;}
+  
+  /* The Modal (background) */
+  .modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 20%;
+    top: 20%;
+    width: 60%; 
+    height: 80%; 
+    overflow: auto; 
+    background-color: f4c5e8; 
+    background-color: rgba(244,197,232,0.9); /* Black w/ opacity */
+  }
+  
+  /* Modal Content (image) */
+  .modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 200px;
+  }
+  
+  /* Caption of Modal Image */
+  #caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+  }
+  
+  /* Add Animation */
+  .modal-content, #caption {  
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+  }
+  
+  @-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+  }
+  
+  @keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+  }
+  
+  /* The Close Button */
+  .close {
+    position: relative;
+    bottom: 10%;
+    transition: 0.3s;
+  }
+  
+
+  
+  /* 100% Image Width on Smaller Screens */
+  @media only screen and (max-width: 200px){
+    .modal-content {
+      width: 100%;
+    }
+  }
